fixed scaling on mobile

--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ main{
   width: 100%;
   height: 200px;
   margin-right: 0%;
-  margin-top: 200px;
+  margin-top: 50px;
   float: left;
   border-radius: 256px;
   text-align: center;
